--- a/.github/workflows/rock-release-dev.yaml
+++ b/.github/workflows/rock-release-dev.yaml
@@ -15,4 +15,4 @@ jobs:
     uses: canonical/observability/.github/workflows/rock-release-dev.yaml@v0
     secrets: inherit
     with:
-      rock-name: tempo
+      rock-name: blackbox-exporter
