--- a/.github/workflows/rock-release-oci-factory.yaml
+++ b/.github/workflows/rock-release-oci-factory.yaml
@@ -11,4 +11,4 @@ jobs:
     uses: canonical/observability/.github/workflows/rock-release-oci-factory.yaml@v0
     secrets: inherit
     with:
-      rock-name: tempo
+      rock-name: blackbox-exporter
